--- a/nginx.conf
+++ b/nginx.conf
@@ -30,9 +30,9 @@ http {
     # EDIT: You can add more server blocks as you recieve more sites.
     server {
         listen 80;
-        root #/home/YOUR_USERNAME/nginx/frontend;
+        root /var/www/site1;
         index index.html;
-        server_name #SITE_1;
+        #server_name SITE_1;
 
         location / {
             try_files $uri $uri/ =404;
