Commented out 2 lines in nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -22,8 +22,8 @@ http {
     types_hash_max_size 2048;
 
     # Include server specific configurations
-    include /etc/nginx/conf.d/*.conf;
-    include /etc/nginx/sites-enabled/*;
+    #include /etc/nginx/conf.d/*.conf;
+    #include /etc/nginx/sites-enabled/*;
 
     # Your server block
     # EDIT: Update root path, server_name, and other values as needed
